2000-05-29  Bart Schaefer  <schaefer@zsh.org>

	* unposted: Completion/Core/_path_files: Add a comment to explain
	the change made in 11635.

2000-05-29  Sven Wischnowsky  <wischnow@zsh.org>

	* 11638: Doc/Zsh/compsys.yo: doc fix, missing `)'
	
	* 11635: Completion/Core/_path_files: make _path_files use glob
 	qualifiers from the line when doing pattern matching
	
	* users/3101: Doc/Zsh/compsys.yo: make handling of default tag clearer
 	in the docs
	
	* 11634: Src/Zle/compcore.c, Src/Zle/compmatch.c, Src/Zle/compresult.c:
 	matching bugs with patterns with two anchors
	
	* 11631: Completion/Base/_arguments: keep information about things
 	to complete in _arguments
	
	* 11624: Completion/Base/_arguments, Completion/Builtins/_zpty,
 	Doc/Zsh/compsys.yo, Src/Zle/computil.c: fixes for _arguments with
 	sets; make _zpty not use sets
	
2000-05-28  Bart Schaefer  <schaefer@zsh.org>

	* 11618: Completion/Base/_arguments: Fix bad shift.

2000-05-28  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 11616: Src/Modules/zftp.c: configure test for netinet/in_systm.h
	is broken on several architectures, so just include it everywhere
	except cygwin.

2000-05-28  Oliver Kiddle  <opk@zsh.org>

	* 11615: Completion/Builtins/_which, Completion/Builtins/_unhash:
	use of _arguments for completion of a couple more builtins

2000-05-27  Bart Schaefer  <schaefer@zsh.org>

	* 11606: Src/parse.c, Test/01grammar.ztst: Propagate parse errors
	out of parse_list() and parse_event(), and test that it worked.

	* 11607: Src/builtin.c: For "read -q", open shout if necessary
	even when SHTTY is already a valid descriptor; just don't close
	it again in that case.  Restores behavior from 10727 that was
	lost in 11524.

2000-05-26  Clint Adams  <schizo@debian.org>

	* 11599: Completion/User/_perl_modules: check to make sure
	the directories in @INC exist and are executable before
	trying to cd to them.

2000-05-26  Peter Stephenson  <pws@cambridgesiliconradio.com>
